[CALCITE-5136] Elevate deprecation warnings to error and handle resultant failures. Fixes applied are:  * move `new URL(...)` to `new URI(...).toUrl()`  * move `Assert.assertThat(...)` to `MatcherAssert.assertThat(...)`  * move `ExpectedException` to manual try-catch to please both JUnit 4.12 and 4.13 (Guava version influences resolution here)  * in all other cases either propagate the deprecation or suppress it.