@@ -32,7 +32,7 @@ import org.mockito.stubbing.Answer;
 
 import java.io.ByteArrayInputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.fail;
@@ -71,7 +71,7 @@ public class AvaticaCommonsHttpClientImplTest {
     };
 
     final AvaticaCommonsHttpClientImpl client =
-            spy(new AvaticaCommonsHttpClientImpl(new URL("http://127.0.0.1")));
+            spy(new AvaticaCommonsHttpClientImpl(new URI("http://127.0.0.1")));
     client.setHttpClientPool(mock(PoolingHttpClientConnectionManager.class), mock(
         ConnectionConfig.class));
 
@@ -105,7 +105,7 @@ public class AvaticaCommonsHttpClientImplTest {
     };
 
     final AvaticaCommonsHttpClientImpl client =
-            spy(new AvaticaCommonsHttpClientImpl(new URL("http://127.0.0.1")));
+            spy(new AvaticaCommonsHttpClientImpl(new URI("http://127.0.0.1")));
     client.setHttpClientPool(mock(PoolingHttpClientConnectionManager.class), mock(
         ConnectionConfig.class));
 
@@ -124,7 +124,7 @@ public class AvaticaCommonsHttpClientImplTest {
   @Test
   public void testPersistentContextReusedAcrossRequests() throws Exception {
     final AvaticaCommonsHttpClientImpl client =
-        spy(new AvaticaCommonsHttpClientImpl(new URL("http://127.0.0.1")));
+        spy(new AvaticaCommonsHttpClientImpl(new URI("http://127.0.0.1")));
     client.setHttpClientPool(mock(PoolingHttpClientConnectionManager.class), mock(
         ConnectionConfig.class));
 
@@ -149,7 +149,7 @@ public class AvaticaCommonsHttpClientImplTest {
   @Test
   public void testPersistentContextThreadSafety() throws Exception {
     final AvaticaCommonsHttpClientImpl client =
-        spy(new AvaticaCommonsHttpClientImpl(new URL("http://127.0.0.1")));
+        spy(new AvaticaCommonsHttpClientImpl(new URI("http://127.0.0.1")));
     client.setHttpClientPool(mock(PoolingHttpClientConnectionManager.class), mock(
         ConnectionConfig.class));
 
